improvements and validations

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,7 +9,7 @@ body {
 	color: #161616;
 
 	button {
-		[disabled] {
+		&:disabled {
 			opacity: 0.6;
 			cursor: not-allowed;
 		}
@@ -22,11 +22,11 @@ body {
 
 html {
 	@media (max-width: 1080px) {
-		font-size: 93.75%; // 15px
+		font-size: 93.75%;
 	}
 
 	@media (max-width: 720px) {
-		font-size: 87.5%; // 15px
+		font-size: 87.5%;
 	}
 
 	body,
